Add longevity calculator
