# go/docs/swagger.json
@@ -110,6 +110,23 @@
         }
     },
     "definitions": {
+        "models.CommitInfo": {
+            "type": "object",
+            "properties": {
+                "author_email": {
+                    "type": "string"
+                },
+                "author_name": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "sha": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ContributorDetail": {
             "type": "object",
             "properties": {
@@ -161,11 +178,31 @@
                 }
             }
         },
+        "models.PullRequestInfo": {
+            "type": "object",
+            "properties": {
+                "merged_at": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.RepositoryInfo": {
             "type": "object",
             "properties": {
                 "commits": {
                     "type": "integer"
+                },
+                "commits_list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CommitInfo"
+                    }
                 },
                 "contributors": {
                     "type": "array",
@@ -244,6 +281,12 @@
                 },
                 "owner": {
                     "type": "string"
+                },
+                "pull_requests": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.PullRequestInfo"
+                    }
                 },
                 "repo": {
                     "type": "string"
