# go/models/pull_request.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"time"
+)
+
+// PullRequestInfo contains information about a pull request
+type PullRequestInfo struct {
+	Number   int        `json:"number"`
+	Status   string     `json:"status"`
+	MergedAt *time.Time `json:"merged_at"`
+}
